--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,4 +14,7 @@ jobs:
       - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: test
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: type-check
       - run: echo "🍏 This job's status is ${{ job.status }}."
