--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,4 +17,7 @@ jobs:
       - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: type-check
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: test
       - run: echo "🍏 This job's status is ${{ job.status }}."
