--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,8 +20,9 @@ jobs:
         uses: borales/actions-yarn@v2.0.0
         with:
           cmd: type-check
-      - name: yarn test
-        uses: borales/actions-yarn@v2.0.0
+      - name: commit changes to branch
+        uses: EndBug/add-and-commit@v7
         with:
-          cmd: test
+          default_author: schema_robot
+          message: 'Regenerate api types based off of schema update'
       - run: echo "🍏 This job's status is ${{ job.status }}."
