--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - test
+  pull_request:
+    branches:
+      - test
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -20,9 +23,9 @@ jobs:
         uses: borales/actions-yarn@v2.0.0
         with:
           cmd: type-check
-      - name: commit changes to branch
-        uses: EndBug/add-and-commit@v7
+      - name: commit changes
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          default_author: github_actions
+          ref: ${{ github.head_ref }}
           message: 'Regenerate api types based off of schema update'
       - run: echo "🍏 This job's status is ${{ job.status }}."
