--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "prettier": "prettier --write ./components/List.tsx"
   },
   "dependencies": {
     "next": "latest",
@@ -19,6 +20,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "jest": "^26.6.3",
+    "prettier": "^2.3.0",
     "ts-jest": "^26.5.5",
     "typescript": "4.0"
   },
