--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,6 +23,10 @@ jobs:
         uses: borales/actions-yarn@v2.0.0
         with:
           cmd: type-check
+      - name: yarn prettier
+        uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: prettier
       - name: commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
