--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -30,5 +30,5 @@ jobs:
       - name: commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          message: 'Regenerate api types based off of schema update'
+          commit_message: 'Regenerate api types based off of schema update'
       - run: echo "🍏 This job's status is ${{ job.status }}."
