--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "test": "jest",
+    "prettier": "prettier --write ./components/ListItem.tsx"
   },
   "dependencies": {
     "next": "latest",
@@ -13,9 +15,13 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.3.0",
+    "ts-jest": "^26.5.5",
     "typescript": "4.0"
   },
   "license": "MIT"
