--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -28,7 +28,12 @@ jobs:
       - name: yarn type-check
         run: |
           yarn type-check
+      - name: yarn prettier
+        run: |
+          yarn prettier
       - name: Commit report
         run: |
-          git commit -am "Automated report"
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git commit -am "Automated report" --author ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           git push
