--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -35,5 +35,5 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          git commit -m "Automated report" --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
+          git commit -am "Automated report" --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
           git push
