--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -33,7 +33,12 @@ jobs:
           yarn prettier
       - name: Commit report
         run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
-          git commit -am "Automated report" --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
-          git push
+          if [ -n "$(git status -s)" ]; then
+            echo "Changes detected";
+            git config --global user.name 'GitHub Actions'
+            git config --global user.email 'actions@github.com'
+            git commit -am "Automated report" --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
+            git push
+          else
+            echo "Working tree clean. Nothing to commit.";
+          fi
