--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -37,7 +37,8 @@ jobs:
             echo "Changes detected";
             git config --global user.name 'GitHub Actions'
             git config --global user.email 'actions@github.com'
-            git commit -am "Automated report" --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
+            git commit -am "Automated report" \
+            --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
             git push
           else
             echo "Working tree clean. Nothing to commit.";
