--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -39,7 +39,7 @@ jobs:
             git config --global user.email 'actions@github.com'
             git commit -am "Automated report" \
             --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
-            git push
+            git push --set-upstream origin "HEAD:${{ github.head_ref }}"
           else
             echo "Working tree clean. Nothing to commit.";
           fi
