--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -35,6 +35,8 @@ jobs:
         run: |
           if [ -n "$(git status -s)" ]; then
             echo "Changes detected";
+            echo "the ref ${{ github.head_ref }}"
+            echo "stuff ${{ github }}"
             git config --global user.name 'GitHub Actions'
             git config --global user.email 'actions@github.com'
             git commit -am "Automated report" \
