--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           if [ -n "$(git status -s)" ]; then
             echo "Changes detected";
-            echo "the ref ${{ github.head_ref }}"
+            echo "the ref ${GITHUB_REF#refs/heads/}}"
             echo "stuff ${{ github }}"
             git config --global user.name 'GitHub Actions'
             git config --global user.email 'actions@github.com'
