--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -35,13 +35,11 @@ jobs:
         run: |
           if [ -n "$(git status -s)" ]; then
             echo "Changes detected";
-            echo "the ref ${GITHUB_REF#refs/heads/}}"
-            echo "stuff ${{ github }}"
             git config --global user.name 'GitHub Actions'
             git config --global user.email 'actions@github.com'
             git commit -am "Automated report" \
             --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
-            git push --set-upstream origin "HEAD:${{ github.head_ref }}"
+            git push --set-upstream origin "HEAD:${GITHUB_REF#refs/heads/}}"
           else
             echo "Working tree clean. Nothing to commit.";
           fi
