--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -35,6 +35,8 @@ jobs:
         run: |
           if [ -n "$(git status -s)" ]; then
             echo "Changes detected";
+            git fetch --depth=1
+            git checkout "${GITHUB_REF#refs/heads/}}"
             git config --global user.name 'GitHub Actions'
             git config --global user.email 'actions@github.com'
             git commit -am "Automated report" \
