--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -34,14 +34,13 @@ jobs:
       - name: Commit report
         run: |
           if [ -n "$(git status -s)" ]; then
-            echo "Changes detected";
-            git fetch --depth=1
-            git checkout "${GITHUB_REF#refs/heads/}}"
+            echo "Changes detected ${{GITHUB_REF#refs/heads/}}";
+
             git config --global user.name 'GitHub Actions'
             git config --global user.email 'actions@github.com'
             git commit -am "Automated report" \
             --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
-            git push --set-upstream origin "HEAD:${GITHUB_REF#refs/heads/}}"
+            git push --set-upstream origin "HEAD:${{GITHUB_REF#refs/heads/}}"
           else
             echo "Working tree clean. Nothing to commit.";
           fi
