--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Commit report
         run: |
           if [ -n "$(git status -s)" ]; then
-            echo "Changes detected ${ GITHUB_REF#refs/heads/ }";
+            echo "Changes detected ${ GITHUB_REF#refs/heads/ }"
 
             git config --global user.name 'GitHub Actions'
             git config --global user.email 'actions@github.com'
