listen to branch

--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -1,5 +1,8 @@
 name: Another workflow
-on: [push]
+on:
+  push:
+    branches:
+      - "hello"
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
