--- a/.github/workflows/another-workflow.yml
+++ b/.github/workflows/another-workflow.yml
@@ -42,7 +42,7 @@ jobs:
             git config --global user.email 'actions@github.com'
             git commit -am "Automated report" \
             --author '${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>'
-            git push --set-upstream origin "HEAD:${GITHUB_REF#refs/heads/}"
+            git push
           else
             echo "Working tree clean. Nothing to commit.";
           fi
