--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -10,9 +10,21 @@ jobs:
         with:
           node-version: 14.x
       - name: Create pull request
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.PUSH_REPO_TOKEN }}
         run: |
           CLONE_DIR=$(mktemp -d)
+          TARGET_BRANCH="master"
+          USER_NAME="GitHub Actions"
           DESTINATION_REPOSITORY_NAME="beer-utiful"
 
           echo "[+] Cloning destination git repository $DESTINATION_REPOSITORY_NAME"
+
+          git config --global user.name $USER_NAME
+          git config --global user.email 'actions@github.com'
+
+          git clone --single-branch --branch "$TARGET_BRANCH" "https://$USER_NAME:$API_TOKEN_GITHUB@$GITHUB_SERVER/$USER_NAME/$DESTINATION_REPOSITORY_NAME.git" "$CLONE_DIR"
+
+          ls -la "$CLONE_DIR"
+
 
