--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -16,14 +16,14 @@ jobs:
           CLONE_DIR=$(mktemp -d)
           TARGET_BRANCH="master"
           USER_NAME="GitHub Actions"
-          DESTINATION_REPOSITORY_NAME="beer-utiful"
+          DESTINATION_REPOSITORY_NAME="NickLewry/beer-utiful"
 
           echo "[+] Cloning destination git repository $DESTINATION_REPOSITORY_NAME"
 
           git config --global user.name $USER_NAME
           git config --global user.email 'actions@github.com'
 
-          git clone --single-branch --branch "$TARGET_BRANCH" "https://$USER_NAME:$API_TOKEN_GITHUB@$GITHUB_SERVER/NickLewry/$DESTINATION_REPOSITORY_NAME.git" "$CLONE_DIR"
+          git clone --single-branch --branch "$TARGET_BRANCH" "https://$USER_NAME:$API_TOKEN_GITHUB@$GITHUB_SERVER/$DESTINATION_REPOSITORY_NAME.git" "$CLONE_DIR"
 
           ls -la "$CLONE_DIR"
 
