--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -23,7 +23,7 @@ jobs:
           git config --global user.name $USER_NAME
           git config --global user.email 'actions@github.com'
 
-          git clone --single-branch --branch "$TARGET_BRANCH" "https://$USER_NAME:$API_TOKEN_GITHUB@$GITHUB_SERVER/$DESTINATION_REPOSITORY_NAME.git" "$CLONE_DIR"
+          git clone --single-branch --branch "$TARGET_BRANCH" "https://$USER_NAME:$API_TOKEN_GITHUB@$GITHUB_SERVER$DESTINATION_REPOSITORY_NAME.git" "$CLONE_DIR"
 
           ls -la "$CLONE_DIR"
 
