--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -63,12 +63,12 @@ jobs:
           # echo "[+] List contents of $TARGET_DIRECTORY"
           # ls "$TARGET_DIRECTORY"
 
-          # echo "[+] Copying contents of source repository folder $TARGET_DIRECTORY to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
-          # cp -ra "$TARGET_DIRECTORY"/. "$CLONE_DIR/$TARGET_DIRECTORY"
-          # cd "$CLONE_DIR"
+          echo "[+] Copying contents of source repository folder $TARGET_DIRECTORY to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
+          cp -ra "$TARGET_DIRECTORY"/. "$CLONE_DIR/$TARGET_DIRECTORY"
+          cd "$CLONE_DIR"
 
-          # # echo "[+] Files that will be pushed"
-          # # ls -la
+          # echo "[+] Files that will be pushed"
+          # ls -la
 
           # # ORIGIN_COMMIT="https://$GITHUB_SERVER/$GITHUB_REPOSITORY/commit/$GITHUB_SHA"
           # # COMMIT_MESSAGE="${COMMIT_MESSAGE/ORIGIN_COMMIT/$ORIGIN_COMMIT}"
