--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -60,12 +60,12 @@ jobs:
           echo "[+] Listing Current Directory Location 2"
             ls -al
 
-          # echo "[+] List contents of $TARGET_DIRECTORY"
-          # ls "$TARGET_DIRECTORY"
+          echo "[+] List contents of $TARGET_DIRECTORY"
+          ls "$TARGET_DIRECTORY"
 
-          echo "[+] Copying contents of source repository folder $TARGET_DIRECTORY to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
-          cp -ra "$TARGET_DIRECTORY"/. "$CLONE_DIR/$TARGET_DIRECTORY"
-          cd "$CLONE_DIR"
+          # echo "[+] Copying contents of source repository folder $TARGET_DIRECTORY to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
+          # cp -ra "$TARGET_DIRECTORY"/. "$CLONE_DIR/$TARGET_DIRECTORY"
+          # cd "$CLONE_DIR"
 
           # echo "[+] Files that will be pushed"
           # ls -la
