use source directory

--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -17,6 +17,7 @@ jobs:
           TARGET_BRANCH="master"
           USER_NAME="GitHub Actions"
           TARGET_DIRECTORY="bru/random"
+          SOURCE_DIR="utils"
           DESTINATION_REPOSITORY_NAME="beer-utiful"
 
           echo "[+] Cloning destination git repository $DESTINATION_REPOSITORY_NAME"
@@ -60,15 +61,30 @@ jobs:
           echo "[+] Listing Current Directory Location 2"
             ls -al
 
-          echo "[+] List contents of $TARGET_DIRECTORY"
-          ls "$TARGET_DIRECTORY"
+          echo "[+] List contents of $SOURCE_DIR"
+          ls "$SOURCE_DIR"
 
-          # echo "[+] Copying contents of source repository folder $TARGET_DIRECTORY to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
-          # cp -ra "$TARGET_DIRECTORY"/. "$CLONE_DIR/$TARGET_DIRECTORY"
-          # cd "$CLONE_DIR"
+          echo "[+] Checking if local $SOURCE_DIRECTORY exist"
+          if [ ! -d "$SOURCE_DIRECTORY" ]
+          then
+            echo "ERROR: $SOURCE_DIRECTORY does not exist"
+            echo "This directory needs to exist when push-to-another-repository is executed"
+            echo
+            echo "In the example it is created by ./build.sh: https://github.com/cpina/push-to-another-repository-example/blob/main/.github/workflows/ci.yml#L19"
+            echo
+            echo "If you want to copy a directory that exist in the source repository"
+            echo "to the target repository: you need to clone the source repository"
+            echo "in a previous step in the same build section. For example using"
+            echo "actions/checkout@v2. See: https://github.com/cpina/push-to-another-repository-example/blob/main/.github/workflows/ci.yml#L16"
+            exit 1
+          fi
 
-          # echo "[+] Files that will be pushed"
-          # ls -la
+          echo "[+] Copying contents of source repository folder $SOURCE_DIRECTORY to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
+          cp -ra "$SOURCE_DIRECTORY"/. "$CLONE_DIR/$TARGET_DIRECTORY"
+          cd "$CLONE_DIR"
+
+          echo "[+] Files that will be pushed"
+          ls -la
 
           # # ORIGIN_COMMIT="https://$GITHUB_SERVER/$GITHUB_REPOSITORY/commit/$GITHUB_SHA"
           # # COMMIT_MESSAGE="${COMMIT_MESSAGE/ORIGIN_COMMIT/$ORIGIN_COMMIT}"
