--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -64,20 +64,20 @@ jobs:
           echo "[+] List contents of $SOURCE_DIR"
           ls "$SOURCE_DIR"
 
-          echo "[+] Checking if local $SOURCE_DIRECTORY exist"
-          if [ ! -d "$SOURCE_DIRECTORY" ]
-          then
-            echo "ERROR: $SOURCE_DIRECTORY does not exist"
-            echo "This directory needs to exist when push-to-another-repository is executed"
-            echo
-            echo "In the example it is created by ./build.sh: https://github.com/cpina/push-to-another-repository-example/blob/main/.github/workflows/ci.yml#L19"
-            echo
-            echo "If you want to copy a directory that exist in the source repository"
-            echo "to the target repository: you need to clone the source repository"
-            echo "in a previous step in the same build section. For example using"
-            echo "actions/checkout@v2. See: https://github.com/cpina/push-to-another-repository-example/blob/main/.github/workflows/ci.yml#L16"
-            exit 1
-          fi
+          # echo "[+] Checking if local $SOURCE_DIRECTORY exist"
+          # if [ ! -d "$SOURCE_DIRECTORY" ]
+          # then
+          #   echo "ERROR: $SOURCE_DIRECTORY does not exist"
+          #   echo "This directory needs to exist when push-to-another-repository is executed"
+          #   echo
+          #   echo "In the example it is created by ./build.sh: https://github.com/cpina/push-to-another-repository-example/blob/main/.github/workflows/ci.yml#L19"
+          #   echo
+          #   echo "If you want to copy a directory that exist in the source repository"
+          #   echo "to the target repository: you need to clone the source repository"
+          #   echo "in a previous step in the same build section. For example using"
+          #   echo "actions/checkout@v2. See: https://github.com/cpina/push-to-another-repository-example/blob/main/.github/workflows/ci.yml#L16"
+          #   exit 1
+          # fi
 
           echo "[+] Copying contents of source repository folder $SOURCE_DIRECTORY to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
           cp -ra "$SOURCE_DIRECTORY"/. "$CLONE_DIR/$TARGET_DIRECTORY"
