--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -65,9 +65,9 @@ jobs:
           ls "$SOURCE_DIR"
 
           # echo "[+] Checking if local $SOURCE_DIRECTORY exist"
-          # if [ ! -d "$SOURCE_DIRECTORY" ]
+          # if [ ! -d "$SOURCE_DIR" ]
           # then
-          #   echo "ERROR: $SOURCE_DIRECTORY does not exist"
+          #   echo "ERROR: $SOURCE_DIR does not exist"
           #   echo "This directory needs to exist when push-to-another-repository is executed"
           #   echo
           #   echo "In the example it is created by ./build.sh: https://github.com/cpina/push-to-another-repository-example/blob/main/.github/workflows/ci.yml#L19"
@@ -79,8 +79,8 @@ jobs:
           #   exit 1
           # fi
 
-          echo "[+] Copying contents of source repository folder $SOURCE_DIRECTORY to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
-          cp -ra "$SOURCE_DIRECTORY"/. "$CLONE_DIR/$TARGET_DIRECTORY"
+          echo "[+] Copying contents of source repository folder $SOURCE_DIR to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
+          cp -ra "$SOURCE_DIR"/. "$CLONE_DIR/$TARGET_DIRECTORY"
           cd "$CLONE_DIR"
 
           echo "[+] Files that will be pushed"
