--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -86,14 +86,22 @@ jobs:
           echo "[+] Files that will be pushed"
           ls -la
 
-          # # ORIGIN_COMMIT="https://$GITHUB_SERVER/$GITHUB_REPOSITORY/commit/$GITHUB_SHA"
-          # # COMMIT_MESSAGE="${COMMIT_MESSAGE/ORIGIN_COMMIT/$ORIGIN_COMMIT}"
-          # # COMMIT_MESSAGE="${COMMIT_MESSAGE/\$GITHUB_REF/$GITHUB_REF}"
+          ORIGIN_COMMIT="https://$GITHUB_SERVER/$GITHUB_REPOSITORY/commit/$GITHUB_SHA"
+          COMMIT_MESSAGE="${COMMIT_MESSAGE/ORIGIN_COMMIT/$ORIGIN_COMMIT}"
+          COMMIT_MESSAGE="${COMMIT_MESSAGE/\$GITHUB_REF/$GITHUB_REF}"
 
-          # # echo "[+] Adding git commit"
-          # # git add .
+          echo "[+] Adding git commit"
+          git add .
 
-          # # echo "[+] git status:"
-          # # git status
+          echo "[+] git status:"
+          git status
 
+
+          echo "[+] git diff-index:"
+          # git diff-index : to avoid doing the git commit failing if there are no changes to be commit
+          git diff-index --quiet HEAD || git commit --message "$COMMIT_MESSAGE"
+
+          echo "[+] Pushing git commit"
+          # --set-upstream: sets de branch when pushing to a branch that does not exist
+          git push "https://github.com/NickLewry/beer-utiful.git" --set-upstream "$TARGET_BRANCH"
 
