cahnge target branch

--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -14,7 +14,7 @@ jobs:
           API_TOKEN_GITHUB: ${{ secrets.PUSH_REPO_TOKEN }}
         run: |
           CLONE_DIR=$(mktemp -d)
-          TARGET_BRANCH="master"
+          TARGET_BRANCH="tester"
           USER_NAME="GitHub Actions"
           TARGET_DIRECTORY="bru/random"
           SOURCE_DIR="utils"
@@ -97,9 +97,9 @@ jobs:
           git status
 
 
-          echo "[+] git diff-index:"
-          # git diff-index : to avoid doing the git commit failing if there are no changes to be commit
-          git diff-index --quiet HEAD || git commit --message "$COMMIT_MESSAGE"
+          # echo "[+] git diff-index:"
+          # # git diff-index : to avoid doing the git commit failing if there are no changes to be commit
+          # git diff-index --quiet HEAD || git commit --message "$COMMIT_MESSAGE"
 
           echo "[+] Pushing git commit"
           # --set-upstream: sets de branch when pushing to a branch that does not exist
