hardcode schema message

--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -99,7 +99,7 @@ jobs:
 
           # echo "[+] git diff-index:"
           # # git diff-index : to avoid doing the git commit failing if there are no changes to be commit
-          git diff-index --quiet HEAD || git commit --message "$COMMIT_MESSAGE"
+          git diff-index --quiet HEAD || git commit --message "schema updates"
 
           echo "[+] Pushing git commit"
           # --set-upstream: sets de branch when pushing to a branch that does not exist
