--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -103,5 +103,5 @@ jobs:
 
           echo "[+] Pushing git commit"
           # --set-upstream: sets de branch when pushing to a branch that does not exist
-          git push "https://$USER_NAME:$API_TOKEN_GITHUB@$GITHUB_SERVER/$DESTINATION_REPOSITORY_USERNAME/$DESTINATION_REPOSITORY_NAME.git" --set-upstream "master"
+          git push "https://$USER_NAME:$PUSH_REPO_TOKEN@$GITHUB_SERVER/$USER_NAME/$DESTINATION_REPOSITORY_NAME.git" --set-upstream "master"
 
