--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -103,5 +103,8 @@ jobs:
 
           echo "[+] Pushing git commit"
           # --set-upstream: sets de branch when pushing to a branch that does not exist
-          git push "${https://$USER_NAME:$PUSH_REPO_TOKEN@$GITHUB_SERVER/NickLewry/beer-utiful.git}" --set-upstream "master"
+
+          echo "this is the url: https://$USER_NAME:$PUSH_REPO_TOKEN@$GITHUB_SERVER/NickLewry/beer-utiful.git"
+
+          git push "https://$USER_NAME:$PUSH_REPO_TOKEN@$GITHUB_SERVER/NickLewry/beer-utiful.git" --set-upstream "master"
 
