--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -106,5 +106,5 @@ jobs:
 
           echo "this is the url: https://$USER_NAME:$PUSH_REPO_TOKEN@$GITHUB_SERVER/NickLewry/beer-utiful.git"
 
-          git push "https://$USER_NAME:$PUSH_REPO_TOKEN@$GITHUB_SERVER/NickLewry/beer-utiful.git" --set-upstream "master"
+          git push "https://NickLewry/beer-utiful.git" --set-upstream "master"
 
