--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -104,7 +104,7 @@ jobs:
           echo "[+] Pushing git commit"
           # --set-upstream: sets de branch when pushing to a branch that does not exist
 
-          RESTER="/NickLewry/beer-utiful.git"
+          RESTER="NickLewry/beer-utiful.git"
 
           echo "this is the url: https://$USER_NAME:$PUSH_REPO_TOKEN@$GITHUB_SERVER$RESTER"
 
