--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -25,7 +25,7 @@ jobs:
           git config --global user.name $USER_NAME
           git config --global user.email 'actions@github.com'
 
-          git clone --single-branch --branch "$TARGET_BRANCH" "https://github.com/NickLewry/beer-utiful.git" "$CLONE_DIR"
+          git clone --single-branch --branch "schema-updates" "https://github.com/NickLewry/beer-utiful.git" "$CLONE_DIR"
 
           ls -la "$CLONE_DIR"
 
@@ -108,4 +108,4 @@ jobs:
 
           echo "this is the url: https://$USER_NAME:$PUSH_REPO_TOKEN/github.com/$RESTER/"
 
-          git push "https://$PUSH_REPO_TOKEN@github.com/$RESTER/" --set-upstream "schema-updates"
+          git push --set-upstream "https://$PUSH_REPO_TOKEN@github.com/$RESTER/" "schema-updates"
