--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -46,7 +46,7 @@ jobs:
               rm -R "$CLONE_DIR/$TARGET_DIRECTORY/"
             fi
 
-            echo "[+] Creating $TARGET_DIRECTORY if doesnt already exist"
+            echo "[+] Creating $TARGET_DIRECTORY if it doesnt already exist"
 
             mkdir -p "$CLONE_DIR/$TARGET_DIRECTORY"
 
@@ -59,31 +59,17 @@ jobs:
 
           mv "$TEMP_DIR/.git" "$CLONE_DIR/.git"
 
-          echo "[+] Listing Current Directory Location 2"
-            ls -al
-
-          echo "[+] List contents of $SOURCE_DIR"
-          ls "$SOURCE_DIR"
-
           echo "[+] Copying contents of source repository folder $SOURCE_DIR to folder $TARGET_DIRECTORY in git repo $DESTINATION_REPOSITORY_NAME"
           cp -ra "$SOURCE_DIR"/. "$CLONE_DIR/$TARGET_DIRECTORY"
           cd "$CLONE_DIR"
 
-          echo "[+] Files that will be pushed"
-          ls -la
-
           git checkout -b $BRANCH_NAME
-
-          ORIGIN_COMMIT="https://$GITHUB_SERVER/$GITHUB_REPOSITORY/commit/$GITHUB_SHA"
-          COMMIT_MESSAGE="${COMMIT_MESSAGE/ORIGIN_COMMIT/$ORIGIN_COMMIT}"
-          COMMIT_MESSAGE="${COMMIT_MESSAGE/\$GITHUB_REF/$GITHUB_REF}"
 
           echo "[+] Adding git commit"
           git add .
 
           echo "[+] git status:"
           git status
-
 
           # echo "[+] git diff-index:"
           # # git diff-index : to avoid doing the git commit failing if there are no changes to be commit
@@ -92,5 +78,5 @@ jobs:
           echo "[+] Pushing git commit"
           git push --set-upstream "https://$PUSH_REPO_TOKEN@github.com/$DESTINATION_REPOSITORY_NAME/" $BRANCH_NAME
 
-          echo "creating pull request"
+          echo "Creating pull request"
           hub pull-request -b "master" -h $BRANCH_NAME --no-edit
