--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -78,5 +78,7 @@ jobs:
           echo "[+] Pushing git commit"
           git push --force --set-upstream "https://$PUSH_REPO_TOKEN@github.com/$DESTINATION_REPOSITORY_NAME/" $BRANCH_NAME
 
-          echo "Creating pull request"
-          hub pull-request -b "master" -h $BRANCH_NAME --no-edit
+          hub pr list --base "schema updates"
+
+          # echo "Creating pull request"
+          # hub pull-request -b "master" -h $BRANCH_NAME --no-edit
