add if condition

--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -80,6 +80,11 @@ jobs:
 
           IS_SCHEMA_PR_OPEN=$(hub pr list --head "schema-updates")
 
+
+          if [-n IS_SCHEMA_PR_OPEN]
+          then
+              echo "there is a PR open **********"
+
           echo "PR LIST ***************** $IS_SCHEMA_PR_OPEN"
           hub pr list --head "schema-updates"
 
