ok here wer go again

--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -117,6 +117,13 @@ jobs:
 
           ls -al
 
+
+          cd "home/runner/work/github-actions-test/github-actions-test"
+
+          echo "printing current pisition *****************"
+
+          pwd
+
           done
 
 
