--- a/.github/workflows/push-test.yml
+++ b/.github/workflows/push-test.yml
@@ -110,7 +110,7 @@ jobs:
 
           echo "listing repos"
 
-          gh pr list --repo "https://github.com/$i"
+          gh pr list
 
           cd "/""
 
