--- a/.github/workflows/clean-commit.yml
+++ b/.github/workflows/clean-commit.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Clean new commit to main
         run: |
             echo "Changes detected - ${{ github.event.head_commit.message }}"
-            echo "${{ github.event.head_commit.message }}" | sed -r 's/[ci skip]+//g'
+            echo "${{ github.event.head_commit.message }}" | sed -r 's/\[ci skip\]+//g'
             rewritten_commit = "${{ github.event.head_commit.message }}" | sed -r 's/[ci skip]+//g'
             git config --global user.name 'GitHub Actions'
             git config --global user.email 'actions@github.com'
