--- a/.github/workflows/clean-commit.yml
+++ b/.github/workflows/clean-commit.yml
@@ -12,8 +12,18 @@ jobs:
       - name: Clean new commit to main
         run: |
             echo "Changes detected - ${{ github.event.head_commit.message }}"
-            echo "${{ github.event.head_commit.message }}" | sed -r 's/\[ci skip\]+//g'
-            rewritten_commit = "${{ github.event.head_commit.message }}" | sed -r 's/\[ci skip\]+//g'
+            # echo "${{ github.event.head_commit.message }}" | sed -r 's/\[ci skip\]+//g'
+            # rewritten_commit = "${{ github.event.head_commit.message }}" | sed -r 's/\[ci skip\]+//g'
+            SUB='[skip]'
+            for commit in $(git rev-list $branch)
+            do
+                if $commit == *"$SUB"* ; then
+                    echo $commit
+                    rewritten_commit = "${{ github.event.head_commit.message }}" | sed -r 's/\[ci skip\]+//g'
+                    echo $rewritten_commit
+                    exit 0
+                fi
+            done
             git config --global user.name 'GitHub Actions'
             git config --global user.email 'actions@github.com'
             git commit --amend -m '${{rewritten_commit}}' \
